src/objects/Annual_Sales_Plan__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Of_Year__c</fullName>
        <label>End Of Year</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enrollment_Actual__c</fullName>
        <label>Enrollment Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrollment_Target__c</fullName>
        <defaultValue>125000</defaultValue>
        <label>Enrollment Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Person_Meetings__c</fullName>
        <label>In-Person Meetings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Plan_Summary__c</fullName>
        <label>Initial Plan Summary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Factors_Contributing_to_Success__c</fullName>
        <label>Key Factors Contributing to Success</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mid_Year__c</fullName>
        <label>Mid Year</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Narrative__c</fullName>
        <label>Narrative:</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Obstacles_and_Quarterly_Summaries__c</fullName>
        <label>Obstacles and Quarterly Summaries</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q1_Summary_Obstacles__c</fullName>
        <label>Q1 Summary</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q1_Summary__c</fullName>
        <label>Q1 Summary</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q2_Summary_Obstacles__c</fullName>
        <label>Q2 Summary</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q2_Summary_Update__c</fullName>
        <label>Q2 Summary Update</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q2_Summary__c</fullName>
        <label>Q2 Summary</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q3_Summary_Obstacles__c</fullName>
        <label>Q3 Summary</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q3_Summary_Update__c</fullName>
        <label>Q3 Summary Update</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q3_Summary__c</fullName>
        <label>Q3 Summary</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q4_Summary_Update__c</fullName>
        <label>Q4 Summary Update</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Annual_Sales_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Annual Sales Plan</label>
    <listViews>
        <fullName>FY_17_Sales_Plans</fullName>
        <columns>NAME</columns>
        <columns>Regional_Manager__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>FY2017</value>
        </filters>
        <label>FY - 17 Sales Plans</label>
        <sharedTo>
            <group>BD_Management</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Annual Sales Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Annual Sales Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>